feat: (esgalu) Se agregan retiro de formato .csv al gitignore

--- a/test/review_data.ipynb
+++ b/test/review_data.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jovyan/work/Google Drive/GQS/Personal/Curso_Programacion/DS4A/FinalProject/ds4a\n"
+      "C:\\Users\\admin\\Documents\\ds4a\n"
      ]
     }
    ],
@@ -168,7 +168,7 @@
       "Index(['State_Name', 'County', 'ALand', 'AWater', 'Mean', 'Median', 'Stdev'], dtype='object')\n",
       "\n",
       "------NATIONALOUTBREAKPUBLICDATATOOL------\n",
-      "Index(['Year', 'Month', 'State', 'Primary Mode', 'Etiology',\n",
+      "Index(['ï»¿Year', 'Month', 'State', 'Primary Mode', 'Etiology',\n",
       "       'Serotype or Genotype', 'Etiology Status', 'Setting', 'Illnesses',\n",
       "       'Hospitalizations', 'Info on Hospitalizations', 'Deaths',\n",
       "       'Info on Deaths', 'Food Vehicle', 'Food Contaminated Ingredient',\n",
@@ -206,7 +206,7 @@
     {
      "data": {
       "text/plain": [
-       "array([2010])"
+       "array([2010], dtype=int64)"
       ]
      },
      "execution_count": 10,
@@ -216,6 +216,27 @@
    ],
    "source": [
     "df['WATER_USAGE'].year.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['EARNINGS'].rename(columns={'estate':'state'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "------CHEMICALS------'year','state'\n",
+    "------EARNINGS------'county', 'year', 'estate'\n",
+    "------KAGGLE_INCOME------'State_Name', 'County'\n",
+    "------NATIONALOUTBREAKPUBLICDATATOOL------'ï»¿Year', 'Month', 'State', \n",
+    "------WATER_USAGE------'year', 'state', 'county'\n",
+    "------WATER_USAGE_DICTIONARY------'state'"
    ]
   },
   {
@@ -242,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
